환율 변동데이터 응답 추가